<resources>
    <string name="app_name">new</string>
    <string name="first_button">1 </string>
    <string name="second_button">2 </string>
    <string name="three_button">3</string>
    <string name="four_button">4 </string>
    <string name="five_button">5 </string>
    <string name="six_button">6</string>
    <string name="seven_button">7 </string>
    <string name="otto_button">8</string>
    <string name="nine_button">9</string>
    <string name="zero_button">0</string>
    <string name="piu_button">+ </string>
    <string name="meno_button">-</string>
    <string name="diviso_button">/</string>
    <string name="uguale_button">=</string>
    <string name="virgola_button">,</string>
    <string name="per_button">*</string>
</resources>