<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    >
    <Button
        android:textAlignment="viewEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"/>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_button"/>


        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_button" />

        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_button" />
        <Button
            android:layout_margin="5dp"
            android:background="@color/Buttonsecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diviso_button" />
    </LinearLayout>

    <LinearLayout

        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_button"/>


        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_button" />

        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_button" />
        <Button
            android:layout_margin="5dp"
            android:background="@color/Buttonsecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/per_button" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven_button"/>


        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otto_button" />

        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine_button" />
        <Button
            android:layout_margin="5dp"
            android:background="@color/Buttonsecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meno_button" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_button"/>


        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/piu_button" />

        <Button
            android:layout_margin="5dp"
            android:background="@color/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virgola_button" />
        <Button
            android:layout_margin="5dp"
            android:background="@color/Buttonsecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uguale_button" />
    </LinearLayout>

</LinearLayout>